tests/fails/f0.t
require("fail")
terra foo()
    return a
end
foo()
